--- a/notebooks/vegetation-02-wrangle.ipynb
+++ b/notebooks/vegetation-02-wrangle.ipynb
@@ -162,12 +162,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "10f3f49f",
       "metadata": {
         "template": "student"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'ndvi_paths' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Loop through each NDVI image\u001b[39;00m\n\u001b[32m      5\u001b[39m ndvi_das = []\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m ndvi_path \u001b[38;5;129;01min\u001b[39;00m \u001b[43mndvi_paths\u001b[49m:\n\u001b[32m      7\u001b[39m     \u001b[38;5;66;03m# Get date from file name\u001b[39;00m\n\u001b[32m      8\u001b[39m     doy = ndvi_path.name[doy_start:doy_end]\n\u001b[32m      9\u001b[39m     date = pd.to_datetime(doy, \u001b[38;5;28mformat\u001b[39m=\u001b[33m'\u001b[39m\u001b[33m%\u001b[39m\u001b[33mY\u001b[39m\u001b[33m%\u001b[39m\u001b[33mj\u001b[39m\u001b[33m'\u001b[39m)\n",
+            "\u001b[31mNameError\u001b[39m: name 'ndvi_paths' is not defined"
+          ]
+        }
+      ],
       "source": [
         "doy_start = -25\n",
         "doy_end = -19\n",
