Changed name of portfolio notebook and added markdown descriptions

--- a/notebooks/portfolio-post.ipynb
+++ b/notebooks/portfolio-post.ipynb
@@ -2,24 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "db894e1b",
+   "id": "84409869",
    "metadata": {},
    "source": [
-    "## Downloading a polygon for another location and getting its NDVI data"
+    "## Background on San Ildefonso Pueblo\n",
+    "Located just about 10 miles from Los Alamos, NM, San Ildefonso is one of the closet situated Indigenous settlements to the nation’s leading nuclear defense lab, Los Alamos National Laboratory (LANL). Though many residents of San Ildefonso have historically been employed by the lab, the two communities comprise a remarkable wealth disparity - in 2023, the median household income for the City of Los Alamos was about $63,000 higher than that for San Ildefonso Pueblo (Los Alamos, NM, 2023; San Ildefonso Pueblo, NM, 2023). LANL has a long history of unethical and often publicly concealed waste discharging, having on many occasions dumped untreated radioactive and other waste into adjacent canyons. This began in the 1940s when LANL was established and occupied as the principal site for development of the atomic bomb. Through a more recent shift in environmental health perception, activism, and policymaking, LANL waste procedures have generally become less problematic. However, such history of unrestricted dumping has permanently contaminated surface water, soils and sediment, and groundwater throughout the nearby canyons flowing to the Rio Grande (Amigos Bravos & Concerned Citizens for Nuclear Safety, 2006). Researchers generally agree that radiation spreading through air or water can severely impact vegetation health extending to the scale of entire ecosystems, causing cascading negative effects even when released in small quantities (DeLoss, 2023; Bonacic et al., 2023; Petit-Berghem & Lemperiere, 2012). As long ago as 2005, LANL acknowledged that radioactive contamination linked to cancer and other health detriments has moved from LANL property onto Pueblo of San Ildefonso lands (LANL, 2005). The following analysis of San Ildefonso Pueblo using a normalized difference vegetation index (NDVI) intends to discover any significant changes in the area’s vegetation health between 2017 and 2023, as well as whether any presence of recent change can be linked to the spread of radioactive contamination. It includes python code used to generate the analysis. MODIS vegetation index data for the analysis was downloaded from NASA Earthdata, using AppEEARS to request extraction. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a2be0341",
+   "id": "e15c4949",
    "metadata": {},
    "source": [
-    "### Step 1: Set up\n",
-    "Load libraries"
+    "## Methods and Results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d7656d37",
    "metadata": {},
    "outputs": [
@@ -188,6 +188,7 @@
     }
    ],
    "source": [
+    "# Load libraries\n",
     "### vector data\n",
     "import geopandas as gpd\n",
     "import pandas as pd\n",
@@ -226,19 +227,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "bf428614",
-   "metadata": {},
-   "source": [
-    "## Step 2: Get polygon for area of interest\n",
-    "Go to [Open Street Maps](https://www.openstreetmap.org/#map=4/38.01/-95.84) and search for your area of interest to see how it's labeled.\n",
-    "\n",
-    "Example: Point Reyes National Seashore (not stored as an address in OSM)\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "946d9723",
    "metadata": {},
    "outputs": [
@@ -327,6 +317,7 @@
     }
    ],
    "source": [
+    "# get polygon for area of interest\n",
     "### search for PRNS\n",
     "sip_gdf = ox.geocode_to_gdf(\n",
     "    'San Ildefonso Pueblo')\n",
@@ -369,29 +360,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f708c08",
+   "id": "790a5e31",
    "metadata": {},
    "source": [
-    "## Step 3: Get NDVI for area of interest"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cfe920f0",
-   "metadata": {},
-   "source": [
-    "First, you'll need to make a free account at [NASA EarthData](https://urs.earthdata.nasa.gov/). When you run the download_files() command, you will see a prompt at the top of your notebook asking you for your NASA EarthData username (not the email address you used for your account!) and password.\n",
-    "    \n",
-    "\n"
+    "Above is the study site of San Ildefonso Pueblo, visualized in blue. Los Alamos county and lab is situated just west of the pueblo’s boundary. Historic waste paths entering San Ildefonso have therefore moved primarily through the canyon flowing into the southwest corner of the pueblo."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f16d1d3d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get NDVI for area of interest\n",
     "### initialize AppeearsDownloader for MODIS NDVI data\n",
     "### set parameters\n",
     "ndvi_downloader = eaapp.AppeearsDownloader(\n",
@@ -555,14 +537,6 @@
    ],
    "source": [
     "len(ndvi_paths)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a76d4514",
-   "metadata": {},
-   "source": [
-    "Continue through the process using the code from the NDVI water rights assignment!"
    ]
   },
   {
@@ -2721,6 +2695,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "afac9b88",
+   "metadata": {},
+   "source": [
+    "The above map visualizes the difference in NDVI between a 2017-2020 date range and a 2020-2023 date range. In this map, negative or pink pixels indicate locations that have worsened in vegetation health over time, while positive or green pixels indicate locations that have improved in vegetation health over time. The map shows that many areas around the southwest corner of the pueblo and into Los Alamos county have worsened slightly over this timeframe. Some areas further east within the pueblo have greatly worsened over time, likely a product of development within the main town center of San Ildefonso itself. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "72dd7a84",
@@ -2755,6 +2737,14 @@
     "    .overlay(sip_gdf, how='difference'))\n",
     "\n",
     "outside_sip_gdf.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ba4b9aa",
+   "metadata": {},
+   "source": [
+    "Above is a visualization of the area outside of the San Ildefonso Pueblo boundary, used for the following analyses."
    ]
   },
   {
@@ -3051,6 +3041,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fa5b7410",
+   "metadata": {},
+   "source": [
+    "The above plot compares vegetation health change from 2017 - 2023 for the outside and inside of San Ildefonso Pueblo, for the month of July in particular. The plot shows that NDVI values outside the pueblo are generally higher than within the pueblo boundary, but that they remain on relatively similar tracks, especially since 2020. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "ef75765e",
@@ -3265,10 +3263,42 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63a3b308",
+   "id": "b873419a",
    "metadata": {},
    "source": [
-    "^Doesn't make sense? 2018 for example doesn't appear to have much less difference than 2020 in previous plot"
+    "This last plot visualizes the difference in vegetation health change between the outside and inside of the pueblo, again for the month of July. While the plot is somewhat exaggerated due to a small range of difference values (y axis), it does demonstrate a similarity in NDVI values in 2018 that becomes more disparate again in following years. Referring back to the previous comparison plot, this change in NDVI difference seems to result from outside NDVI values becoming even greater post-2018 than inside NDVI values, especially in 2019 where a particularly healthy July was much more effective outside of the pueblo than inside. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "baa7dda9",
+   "metadata": {},
+   "source": [
+    "## Discussion\n",
+    "While there is some evidence that areas closer to Los Alamos have worsened more than other areas in San Ildefonso over time, this analysis cannot make a firm conclusion as to whether this may result from radioactive contamination, other lab practices, or unrelated change. It does find vegetation health to be generally higher outside of San Ildefonso Pueblo than inside, despite a large riparian area of the Rio Grande situated within the pueblo boundary. Considerations relating to pueblo water infrastructure and environmental monitoring might therefore be helpful to lessen this disparity. Further research will be required to investigate vegetation health differences and potential traces to waste from Los Alamos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b89d3b84",
+   "metadata": {},
+   "source": [
+    "## References:\n",
+    "Amigos Bravos & Concerned Citizens for Nuclear Safety. (2006). HISTORIC AND CURRENT DISCHARGES FROM LOS ALAMOS  NATIONAL LABORATORY: ANALYSIS AND RECOMMENDATIONS [Review of HISTORIC AND CURRENT DISCHARGES FROM LOS ALAMOS NATIONAL LABORATORY: ANALYSIS AND RECOMMENDATIONS]. https://nukewatch.org/wp-content/uploads/2019/08/amigos_bravos.pdf\n",
+    "\n",
+    "Bonacic, C., Medellin, R. A., Ripple, W., Sukumar, R., Ganswindt, A., Padua, S. M., Padua, C., Pearl, M. C., Aguirre, L. F., Valdés, L. M., Buchori, D., Innes, J. L., Ibarra, J. T., Rozzi, R., & Aguirre, A. A. (2023). Scientists warning on the ecological effects of radioactive leaks on ecosystems. Frontiers in Ecology and Evolution, 10. https://doi.org/10.3389/fevo.2022.1099162\n",
+    "\n",
+    "DeLoss, J. (2023, February 3). International group of scientists warns nuclear radiation has devastating impacts on ecosystems. Warner College of Natural Resources. https://warnercnr.source.colostate.edu/international-group-of-scientists-warns-nuclear-radiation-has-devastating-impacts-on-ecosystems/\n",
+    "‌\n",
+    "Didan, K. (2021). MODIS/Terra Vegetation Indices 16-Day L3 Global 250m SIN Grid V061 [Data set]. NASA Land Processes Distributed Active Archive Center. https://doi.org/10.5067/MODIS/MOD13Q1.061 Date Accessed: 2025-11-26\n",
+    "\n",
+    "LANL, 2005. Environmental Surveillance at Los Alamos during 2004, LA-14239-ENV. September 2005.\n",
+    "\n",
+    "Los Alamos, NM | Data USA. (2023). Datausa.io. https://datausa.io/profile/geo/los-alamos-nm\n",
+    "\n",
+    "Petit-Berghem, Y., Lemperiere, G. Vegetation Cover and Long-Term Conservation of Radioactive Waste Packages: The Case Study of the CSM Waste Disposal Facility (Manche District, France). Environmental Management 49, 605–622 (2012). https://doi.org/10.1007/s00267-011-9805-2\n",
+    "‌\n",
+    "San Ildefonso Pueblo, NM | Data USA. (2023). Datausa.io. https://datausa.io/profile/geo/san-ildefonso-pueblo-nm/"
    ]
   }
  ],
