Edited description font size and downloaded html

--- a/notebooks/portfolio-post.ipynb
+++ b/notebooks/portfolio-post.ipynb
@@ -363,7 +363,7 @@
    "id": "790a5e31",
    "metadata": {},
    "source": [
-    "Above is the study site of San Ildefonso Pueblo, visualized in blue. Los Alamos county and lab is situated just west of the pueblo’s boundary. Historic waste paths entering San Ildefonso have therefore moved primarily through the canyon flowing into the southwest corner of the pueblo."
+    "#### Above is the study site of San Ildefonso Pueblo, visualized in blue. Los Alamos county and lab is situated just west of the pueblo’s boundary. Historic waste paths entering San Ildefonso have therefore moved primarily through the canyon flowing into the southwest corner of the pueblo."
    ]
   },
   {
@@ -2699,7 +2699,7 @@
    "id": "afac9b88",
    "metadata": {},
    "source": [
-    "The above map visualizes the difference in NDVI between a 2017-2020 date range and a 2020-2023 date range. In this map, negative or pink pixels indicate locations that have worsened in vegetation health over time, while positive or green pixels indicate locations that have improved in vegetation health over time. The map shows that many areas around the southwest corner of the pueblo and into Los Alamos county have worsened slightly over this timeframe. Some areas further east within the pueblo have greatly worsened over time, likely a product of development within the main town center of San Ildefonso itself. "
+    "#### The above map visualizes the difference in NDVI between a 2017-2020 date range and a 2020-2023 date range. In this map, negative or pink pixels indicate locations that have worsened in vegetation health over time, while positive or green pixels indicate locations that have improved in vegetation health over time. The map shows that many areas around the southwest corner of the pueblo and into Los Alamos county have worsened slightly over this timeframe. Some areas further east within the pueblo have greatly worsened over time, likely a product of development within the main town center of San Ildefonso itself. "
    ]
   },
   {
@@ -2744,7 +2744,7 @@
    "id": "8ba4b9aa",
    "metadata": {},
    "source": [
-    "Above is a visualization of the area outside of the San Ildefonso Pueblo boundary, used for the following analyses."
+    "#### Above is a visualization of the area outside of the San Ildefonso Pueblo boundary, used for the following analyses."
    ]
   },
   {
@@ -3045,7 +3045,7 @@
    "id": "fa5b7410",
    "metadata": {},
    "source": [
-    "The above plot compares vegetation health change from 2017 - 2023 for the outside and inside of San Ildefonso Pueblo, for the month of July in particular. The plot shows that NDVI values outside the pueblo are generally higher than within the pueblo boundary, but that they remain on relatively similar tracks, especially since 2020. "
+    "#### The above plot compares vegetation health change from 2017 - 2023 for the outside and inside of San Ildefonso Pueblo, for the month of July in particular. The plot shows that NDVI values outside the pueblo are generally higher than within the pueblo boundary, but that they remain on relatively similar tracks, especially since 2020. "
    ]
   },
   {
@@ -3266,7 +3266,7 @@
    "id": "b873419a",
    "metadata": {},
    "source": [
-    "This last plot visualizes the difference in vegetation health change between the outside and inside of the pueblo, again for the month of July. While the plot is somewhat exaggerated due to a small range of difference values (y axis), it does demonstrate a similarity in NDVI values in 2018 that becomes more disparate again in following years. Referring back to the previous comparison plot, this change in NDVI difference seems to result from outside NDVI values becoming even greater post-2018 than inside NDVI values, especially in 2019 where a particularly healthy July was much more effective outside of the pueblo than inside. "
+    "#### This last plot visualizes the difference in vegetation health change between the outside and inside of the pueblo, again for the month of July. While the plot is somewhat exaggerated due to a small range of difference values (y axis), it does demonstrate a similarity in NDVI values in 2018 that becomes more disparate again in following years. Referring back to the previous comparison plot, this change in NDVI difference seems to result from outside NDVI values becoming even greater post-2018 than inside NDVI values, especially in 2019 where a particularly healthy July was much more effective outside of the pueblo than inside. "
    ]
   },
   {
