started markdown discussion

--- a/notebooks/Konza-ndvi.ipynb
+++ b/notebooks/Konza-ndvi.ipynb
@@ -3417,6 +3417,25 @@
     "july_ndvi_df.Difference.hvplot(\n",
     "    title='Difference in NDVI within and outside Konza Prairie')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2684e4a9",
+   "metadata": {},
+   "source": [
+    "## Discussion\n",
+    "Visualized in Figure _, there is a stark difference between vegetation health change outside of the prairie, where vegetation had become more healthy during the 2008-2012 date range, and vegetation health change inside of the prairie, where vegetation had generally become less healthy during the 2008-2012 date range, especially near the east of the study site. This is not likely to result from precipitation differences as the spatial difference between the outside and inside of the prairie is too small. Rather, this difference occurs likely because the areas displaying most positive change are primarily irrigated agriculture land wedged in between Manhattan, KS and Konza Prairie Biological Station, just north of the study site. It is difficult to determine the cause of vegetation health increases from the 2004-2008 date range to the 2008-2012 date range in this agricultural area amongst a simultaneous decline in vegetation health inside the Prairie without further research, but inferences can be made. Using a Google Earth time slider, it is not obvious whether many new agriculture plots were formed within the appropriate time period, but many plots do appear greener in summer 2010 and 2012 satellite imagery vs summer 2007 imagery, for example (Google, n.d.). I would hypothesize, therefore, that some of these plots added irrigation infrastructure or upgraded their irrigation technology during the 2008-2012 date range. Additionally, some farms in this area, such as Britt's Farm and A&H Farm, have greatly expanded agritourism efforts in recent years (http://www.brittsfarm.com/; https://www.aandhfarm.com/about), an industry built upon produce and other agricultural production that may have lead farmers to focus even more on advanced irrigation to prepare their farms aesthetically for new events and tours during this date range. Changes in precipitation may best explain the difference trend, however. Average yearly precipitation decreased from 35.55 inches in the 2004-2008 date range to 33.44 inches in the 2008-2012 date range. Konza Prairie's vegetation productivity is controlled primarily by precipitation amongst a lack of irrigation, so this difference may explain the slight decrease in vegetation health within the Prairie, and especially the prominent internal decrease in vegetation health from 2011 to 2012, when yearly precipitation dropped by almost 10 in (Figure _). To account for the decrease in precipitation, farmers likely upped their irrigation use during the 2008-2012 period, creating agricultural areas where vegetation health is more controllable and dictated less by precipitation levels. Irrigation advancements likely explain the trend visualized in Figure _ as well (last plot): a general decrease in vegetation health difference within and outside Konza Prairie over time. Konza Prairie Biologial Station exhibited higher vegetation health levels for years, likely due to its protected, natural system and lack of development compared to agricultural areas outside, but this difference has lessened over time with the expanded use of irrigation. With extra time and resources, an analysis extending beyond 2012 and up to the current year could better analyze the likelihood of irrigation as a driver of internal and external NDVI difference change."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22ebc09e",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "\n",
+    "Google (n.d.). Google Earth Pro (Version 7.3.6) [Software]. https://www.google.com/earth/. "
+   ]
   }
  ],
  "metadata": {
