--- a/notebooks/Konza-climate.ipynb
+++ b/notebooks/Konza-climate.ipynb
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "e8998dc4",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        "<Axes: title={'center': 'Precipitation at Konza Prairie Biological Station, KS'}, xlabel='Year', ylabel='Precipitation (in)'>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -300,13 +300,26 @@
    ],
    "source": [
     "# Plot precipitation over time\n",
-    "Konza_climate_df.PRCP.resample('YS').sum().plot(\n",
+    "Konza_precip0 = Konza_climate_df.PRCP.resample('YS').sum().plot(\n",
     "    title='Precipitation at Konza Prairie Biological Station, KS',\n",
     "    xlabel='Year',\n",
     "    ylabel='Precipitation (in)',\n",
     "    legend=False,\n",
     "    color='blue',\n",
-    "    figsize=(5, 2.5))"
+    "    figsize=(5, 2.5))\n",
+    "Konza_precip0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a349dd9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save as png (this line of code generated with the help of ChatGPT)\n",
+    "fig = Konza_precip0.get_figure()\n",
+    "fig.savefig('Konza_precip0.png', dpi=300, bbox_inches='tight')"
    ]
   },
   {
@@ -559,18 +572,6 @@
     "\n",
     "# Display the plot without extra text\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f2f2d305",
-   "metadata": {},
-   "source": [
-    "This precipitation data was taken by the NOAA NCEI, and more specifically at station USW00053974 in Manhattan, KS. The data was collected daily at this land-based station and was summed to represent total precipitation values for each year between 2004 (when data collection at this station began) and 2024.\n",
-    "\n",
-    "Citation: Menne, Matthew J., Imke Durre, Bryant Korzeniewski, Shelley McNeill, Kristy Thomas, Xungang Yin, Steven Anthony, Ron Ray, Russell S. Vose, Byron E.Gleason, and Tamara G. Houston (2012): Global Historical Climatology Network - Daily (GHCN-Daily), Version 3. MANHATTAN 6 SSW, KS US station USW00053974 Precipitation Data. NOAA National Climatic Data Center. doi:10.7289/V5D21VHZ Accessed Dec. 1, 2025.\n",
-    "\n",
-    "Matthew J. Menne, Imke Durre, Russell S. Vose, Byron E. Gleason, and Tamara G. Houston, 2012: An Overview of the Global Historical Climatology Network-Daily Database. J. Atmos. Oceanic Technol., 29, 897-910. doi:10.1175/JTECH-D-11-00103.1."
    ]
   },
   {
